[project]
name = "scribe"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "h3>=4.1",
    "geopandas>=0.14",
    "spopt>=0.6",
    "libpysal>=4.9",
    "esda>=2.5",
    "scikit-learn>=1.4",
    "pykrige>=1.7",
    "loess>=2.1.2",
    "statsmodels>=0.14",
    "joblib>=1.3",
    "tqdm>=4.66",
    "google-cloud-bigquery>=3.17",
    "google-cloud-bigquery-storage>=2.24",
    "pyarrow>=14.0",
    "click>=8.1",
    "shapely>=2.0",
    "matplotlib>=3.8",
    "requests>=2.31",
]

[tool.uv]
dev-dependencies = []
